# Operating-Systems-BSU-Lab-1

./: OS Laboratory Work 1.sln  README.md
OS Laboratory Work 1/: CMakeLists.txt  Creator.cpp  Main.cpp  OS Laboratory Work 1.cpp  OS Laboratory Work 1.vcxproj  OS Laboratory Work 1.vcxproj.filters  Reporter.cpp  employee.cpp  employee.h
OS Laboratory Work 1/tests/: CMakeLists.txt  header.h  test_creator.cpp  test_employee.cpp  test_reporter.cpp
