enable_testing()
include(GoogleTest)

function(add_lab_test target_name source_file extra_sources)
    add_executable(${target_name}
        ${source_file}
        ${extra_sources}
    )
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    target_link_libraries(${target_name} PRIVATE gtest_main)
    set_property(TARGET ${target_name} PROPERTY CXX_STANDARD 20)
    add_test(NAME Run${target_name} COMMAND ${target_name})
    gtest_discover_tests(${target_name})
endfunction()

add_lab_test(TestEmployee test_employee.cpp "../employee.cpp;../employee.h")
add_lab_test(TestCreator test_creator.cpp "../Creator.cpp;../employee.cpp;../employee.h")
add_lab_test(TestReporter test_reporter.cpp "../Reporter.cpp;../employee.cpp;../employee.h")